log
Sat 09 Sep 2023 02:12:48 AM UTC: 
 hashmap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:62:8: error: ‘*map.buckets’ may be used uninitialized [-Werror=maybe-uninitialized]
   62 |     map->buckets[i]=NULL;
      |     ~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0716d11
Sat 09 Sep 2023 05:56:10 PM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:62:8: error: ‘*map.buckets’ may be used uninitialized [-Werror=maybe-uninitialized]
   62 |     map->buckets[i]=NULL;
      |     ~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
df15b5a
Sat 09 Sep 2023 06:03:08 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|6
total_score: 0/70
b710ded
Sat 09 Sep 2023 06:35:27 PM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
45271c7
Sat 09 Sep 2023 06:38:02 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|6
total_score: 0/70
f1e0feb
Sat 09 Sep 2023 06:40:48 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
11286ed
